# objstore

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  deny.toml  flake.nix
.github/workflows/: ci.yaml
examples/: Cargo.toml
objstore/: CHANGELOG.md  Cargo.toml  README.md
objstore/src/: builder.rs  error.rs  lib.rs  provider.rs  store.rs  types.rs
objstore/src/backend/: mod.rs
objstore/src/wrapper/: mod.rs  prefix.rs  trace.rs
objstore/tests/: prefix.rs
objstore_config/: Cargo.toml
objstore_config/src/: fs.rs  lib.rs
objstore_fs/: CHANGELOG.md  Cargo.toml
objstore_fs/src/: lib.rs  provider.rs
objstore_ftp/: Cargo.toml
objstore_ftp/src/: config.rs  lib.rs  provider.rs  store.rs
objstore_ftp/tests/: compose.yaml
objstore_github/: Cargo.toml  README.md
objstore_github/src/: config.rs  lib.rs  provider.rs  store.rs
objstore_logfs/: Cargo.toml
objstore_logfs/src/: config.rs  lib.rs  provider.rs  store.rs
objstore_memory/: CHANGELOG.md  Cargo.toml
objstore_memory/src/: lib.rs  provider.rs
objstore_s3_light/: CHANGELOG.md  Cargo.toml
objstore_s3_light/src/: config.rs  lib.rs  provider.rs  store.rs  util.rs
objstore_sftp/: Cargo.toml
objstore_sftp/src/: config.rs  lib.rs  pool.rs  provider.rs  store.rs
objstore_sftp/tests/: compose.yaml  emberstack_sftp_config.json
objstore_test/: Cargo.toml  README.md  compose.yaml
objstore_test/src/: lib.rs
ui/: Cargo.toml  Makefile  README.md
ui/docs/: ai_prompt_dioxus.md
ui/src/: context.rs  main.rs  router.rs  store.rs
ui/src/cmp/: connection_manager.rs  mod.rs  object_delete_modal.rs  object_viewer_modal.rs
ui/src/cmp/browser/: browser_settings_form.rs  mod.rs  table.rs
ui/src/cmp/object/: download_modal.rs  helpers.rs  mod.rs  object_creator.rs  viewer.rs
ui/src/cmp/s3/: form.rs  mod.rs
ui/src/cmp/util/: form.rs  loader.rs  mod.rs
ui/src/views/: browser.rs  home.rs  mod.rs  navbar.rs  new_connection.rs  settings.rs
