[workspace]
resolver = "2"
members = [
    "./objstore",
    "objstore_fs",
    "objstore_memory",
    "objstore_fs",
    "objstore_s3_light", "objstore_test", "examples",
]

[workspace.package]
authors = ["Christoph Herzog <chris@theduke.at>"]
keywords = ["objectstore", "kvstore", "s3"]
repository = "https://github.com/theduke/objstore"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2024"

# categories = []
# Commented out - we don't want this repo to show up on crates.io.
# repository = "https://github.com/wasmerio/edge"

[workspace.dependencies]
objstore = { path = "./objstore", version = "0.1.0" }

async-trait = "0.1"
bytes = "1"
time = "0.3.41"
anyhow = "1"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt"] }
uuid = "1"
sha2 = "0.10"
tracing = "0.1"
url = { version = "2.5.4" }
futures = "0.3"
pretty_assertions = "1.4.1"
