[workspace]
resolver = "2"
members = [
    "objstore",
    "objstore_config",
    "objstore_fs",
    "objstore_fs",
    "objstore_memory",
    "objstore_s3_light",
    "objstore_test",
    "objstore_ftp",

    "examples",
]
exclude = [
    "ui",
]

[workspace.package]
authors = ["Christoph Herzog <chris@theduke.at>"]
readme = "README.md"
keywords = [
    "objectstore",
    "kvstore",
    "s3",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/theduke/objstore"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
futures = "0.3"
pretty_assertions = "1.4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
time = "0.3.41"
tracing = "0.1"
uuid = "1"
test-log = "0.2"

[workspace.dependencies.objstore]
version = "0.1.0"
path = "./objstore"

[workspace.dependencies.tokio]
version = "1"
features = [
    "sync",
    "rt",
]

[workspace.dependencies.url]
version = "2.5.4"
