[workspace]
resolver = "2"
members = [
    "objstore_test",

    "examples",

    "objstore",
    "objstore_config",

    "objstore_fs",
    "objstore_memory",
    "objstore_s3_light",
    "objstore_logfs",
    "objstore_github",
]
exclude = [
    "ui",
]

[workspace.package]
authors = ["Christoph Herzog <chris@theduke.at>"]
readme = "README.md"
description = "A lightweight, modular Rust object store abstraction with multiple implementations (filesystem, memory, S3, and log-backed) for testing and production use."
keywords = [
    "objectstore",
    "kvstore",
    "s3",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/theduke/objstore"
edition = "2024"
version = "0.1.0-alpha.1"

[workspace.dependencies]

# Repo-local crates
objstore = { path = "./objstore", version = "0.1.0-alpha.1" }
objstore_config = { path = "./objstore_config", version = "0.1.0-alpha.1" }
objstore_fs = { path = "./objstore_fs", version = "0.1.0-alpha.1" }
objstore_logfs = { path = "./objstore_logfs", version = "0.1.0-alpha.1" }
objstore_memory = { path = "./objstore_memory", version = "0.1.0-alpha.1" }
objstore_s3_light = { path = "./objstore_s3_light", version = "0.1.0-alpha.1" }

# External crates
anyhow = "1"
async-trait = "0.1"
bytes = "1"
futures = "0.3"
pretty_assertions = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
time = "0.3"
tracing = "0.1"
uuid = "1"
test-log = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
url = "2"
