[package]
name = "examples"
version = "0.1.0"
authors.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

publish = false

[dependencies]
objstore = { path = "../objstore" }
objstore_fs = { path = "../objstore_fs" }
objstore_memory = { path = "../objstore_memory" }
objstore_s3_light = { path = "../objstore_s3_light" }
objstore_github = { path = "../objstore_github" }

url.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
