[package]
name = "objstore_config"
version = "0.1.0"
authors.workspace = true
readme.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[features]
default = ["tokio"]

tokio = ["dep:tokio"]

[dependencies]
serde.workspace = true
url.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde_yaml = "0.9.34"
async-trait.workspace = true

tokio = { workspace = true, features = ["fs", "rt-multi-thread"], optional = true }
