[package]
name = "objstore_config"
version.workspace = true
authors.workspace = true
readme.workspace = true
description = "Configuration utilities and types for the objstore family of crates."
keywords.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[features]
default = ["tokio"]

tokio = ["dep:tokio"]

[dependencies]
serde.workspace = true
url.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde_yaml = "0.9.34"
async-trait.workspace = true

tokio = { workspace = true, features = ["fs", "rt-multi-thread"], optional = true }
