[package]
name = "objstore_ftp"
version = "0.1.0"
authors.workspace = true
readme.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[features]
rustls = ["suppaftp/tokio-rustls"]

[dependencies]
suppaftp = { version = "7.0.3", features = ["tokio"] }
