[package]
name = "objstore_ftp"
version = "0.1.0"
authors.workspace = true
readme.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[features]
rustls = ["suppaftp/tokio-rustls"]

[dependencies]
objstore = { path = "../objstore", version = "0.1.0" }
suppaftp = { version = "7.0.3", features = ["tokio"] }

bytes.workspace = true
time = { workspace = true, features = ["formatting", "parsing"] }
tokio = { workspace = true, features = ["io-util"] }
anyhow.workspace = true
async-trait.workspace = true
serde = { workspace = true, features = ["derive"] }
futures.workspace = true
sha2.workspace = true
url.workspace = true
tokio-util = { version = "0.7.15", features = ["io"] }
tracing.workspace = true

md5 = "0.7"

[dev-dependencies]
objstore_test = { path = "../objstore_test" }
test-log.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "io-util"] }
