[package]
name = "objstore_logfs"
version.workspace = true
authors.workspace = true
readme.workspace = true
description = "logfs backend for objstore"
keywords.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

publish = false

[dependencies]
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
objstore.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_bytes = "0.11"
tokio = { workspace = true, features = ["rt-multi-thread"] }
url.workspace = true

logfs = "0.1.1"
base64 = "0.22"
zeroize = "1.5"

# time crate used for filling in timestamps when backend doesn't provide them
time = { workspace = true, features = ["formatting", "parsing"] }

# sha2 used to compute object hashes for copied data
sha2 = { workspace = true }

[dev-dependencies]
objstore_test = { path = "../objstore_test" }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync"] }
tempfile = "3.20.0"
test-log = { workspace = true, features = ["trace"] }
