[package]
name = "objstore_s3_light"
version.workspace = true
authors.workspace = true
description = "s3_light backend for objstore"
keywords.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true


[features]
default = ["rustls"]
rustls = ["reqwest/rustls"]

[dependencies]
objstore.workspace = true

bytes.workspace = true
time = { workspace = true, features = ["formatting", "parsing"] }
tokio = { workspace = true, features = ["sync", "rt"] }
anyhow.workspace = true
async-trait.workspace = true
sha2.workspace = true
futures.workspace = true
tracing.workspace = true
serde.workspace = true
url = { workspace = true, features = ["serde"] }

reqwest = { version = "0.13", default-features = false, features = ["stream"] }
rusty-s3 = "0.9.0"
percent-encoding = { version = "2.3.1" }
http = "1.3.1"
base64 = "0.22"
jiff = "0.2.15"
quick-xml = { version = "0.39", features = ["serialize"] }

[dev-dependencies]
objstore_test = { path = "../objstore_test" }
pretty_assertions.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
serde_json.workspace = true
