[package]
name = "objstore_test"
version = "0.1.0"
authors.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
objstore.workspace = true
objstore_memory = { path = "../objstore_memory" }

tokio = { workspace = true, features = ["macros", "rt"] }
uuid = { workspace = true, features = ["v4"] }
bytes.workspace = true
futures.workspace = true
anyhow.workspace = true
sha2.workspace = true
time.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

pretty_assertions = "1.4.1"
md5 = "0.8.0"
