[package]
name = "objstore_test"
version.workspace = true
authors.workspace = true
description = "Test utilities and helpers for running unit and integration tests across the objstore workspace."
keywords.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true


publish = false

[dependencies]
objstore.workspace = true

tokio = { workspace = true, features = ["macros", "rt"] }
uuid = { workspace = true, features = ["v4"] }
bytes.workspace = true
futures.workspace = true
anyhow.workspace = true
sha2.workspace = true
time.workspace = true
tracing.workspace = true

pretty_assertions = "1.4.1"
md5 = "0.8.0"
