[package]
name = "ui"
version = "0.1.0"
authors = ["Christoph Herzog <chris@theduke.at>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["desktop"]

desktop = ["dioxus/desktop", "objstore_config/tokio", "dep:tokio", "objstore_s3_light/rustls"]
web = ["dioxus/web"]
mobile = ["dioxus/mobile"]


[dependencies]
objstore = { path = "../objstore" }
objstore_config = { path = "../objstore_config" }
objstore_s3_light = { path = "../objstore_s3_light" }

dioxus-bulma = { path = "../../dioxus-bulma" }
dioxus = { version = "0.7.0-alpha.3", features = ["router"] }

time = "0.3"
anyhow = "1"
tokio = { version = "1", optional = true, features = ["rt-multi-thread"] }
tracing = "0.1"
futures = "0.3"
dioxus-free-icons = { version = "0.10.0-alpha.1", features = ["font-awesome-solid", "font-awesome-brands"] }

[lints.cargo]
non_snake_case = "allow"

