[package]
name = "ui"
version.workspace = true
authors = ["Christoph Herzog <chris@theduke.at>"]
description = "Dioxus-based UI for the objstore project (desktop, web, and mobile frontends)."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["desktop"]

desktop = ["dioxus/desktop", "objstore_config/tokio", "dep:tokio", "objstore_s3_light/rustls"]
web = ["dioxus/web"]
mobile = ["dioxus/mobile"]


[dependencies]
objstore.workspace = true
objstore_config.workspace = true
objstore_s3_light.workspace = true

dioxus-bulma = { path = "../../dioxus-bulma" }
dioxus = { version = "0.7.0-alpha.3", features = ["router"] }

time = "0.3"
anyhow = "1"
tokio = { version = "1", optional = true, features = ["rt-multi-thread"] }
tracing = "0.1"
futures = "0.3"
dioxus-free-icons = { version = "0.10.0-alpha.1", features = ["font-awesome-solid", "font-awesome-brands"] }
hex = "0.4.3"
url = "2"

[lints.cargo]
non_snake_case = "allow"
